MAINT-2403 Add test case for semantic index rebuild